# misc

./: README.md
farsight/net/dbus/event_manager/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  autogen.sh  configure  configure.in
jf2/: Makefile.am  Makefile.in  autogen.sh  config.h.in  configure  configure.in
jf2/common/: Makefile.am  Makefile.in  jtype.h
jf2/os/: Makefile.am  Makefile.in  c.mk  gen_c_mk.sh  jos.elf  jos.map  ld.s  shell  t.s
jf2/os/app/: Makefile.am  Makefile.in
jf2/os/app/shell/: Makefile.am  Makefile.in  shell.c
jf2/os/common/: Makefile.am  Makefile.in  jos_type.h
jf2/os/kernel/: Makefile.am  Makefile.in  irq.c  memory.c  os_init.c  soft_irq.c  trace.c  trace.h
jf2/os/kernel/arch/: Makefile.in
jf2/os/libc/: Makefile.am  Makefile.in  assert.h  ctype.c  ctype.h  pc.mk  stdio.c  stdio.h  stdlib.c  stdlib.h  string.c  string.h  syscall.c  syscall.h  test  test.c
jf2/os/libc/arch/: Makefile.am  Makefile.in
jf2/vm/: Makefile.am  Makefile.in  arm7.c  arm7_test.c  jinstruction.h  jioport.h  jioport_dummy.c  jioport_dummy.h  jmachine.c  jmachine.h  main_arm7.c  v
jf2/vm/arm7/: Makefile.am  Makefile.in  arm7_cond.c  arm7_macro.h  arm7_memory.c  arm7_memory.h  arm7_nv.c  arm7_nv.h  arm7i_add_08.c  arm7i_add_28.c  arm7i_and_00.c  arm7i_and_20.c  arm7i_bic_3c.c  arm7i_bl_a0.c  arm7i_bl_af.c  arm7i_bl_b0.c  arm7i_bl_bf.c  arm7i_cdp_ee.c  arm7i_cmp_15.c  arm7i_cmp_35.c  arm7i_ldmdb_91.c  arm7i_ldmia_89.c  arm7i_ldmia_8b.c  arm7i_ldmia_8d.c  arm7i_ldmia_8f.c  arm7i_ldmib_99.c  arm7i_ldr_49.c  arm7i_ldr_51.c  arm7i_ldr_59.c  arm7i_ldr_79.c  arm7i_ldrb_45.c  arm7i_ldrb_4d.c  arm7i_ldrb_5d.c  arm7i_ldrb_5f.c  arm7i_ldrb_7d.c  arm7i_mov_1a.c  arm7i_mov_3a.c  arm7i_movs_1b.c  arm7i_mrs_10.c  arm7i_mrs_14.c  (+34 more)
jf2/vm/devices/: Makefile.am  Makefile.in  jioport_host_serial.c  jioport_host_serial.h
projects/active-sync-mobile/: AUTHORS  Makefile.am  Makefile.in  README  asm-device.pc.in  asm-host.pc.in  autogen.sh  config.h.in  configure  configure.in
projects/active-sync-mobile/common/: Makefile.am  Makefile.in  asm-common.c  asm-common.h  asm-connection.h  asm-handle-dir.c  asm-handle-dir.h  asm-handle-file.c  asm-handle-file.h  asm-handle-process.c  asm-handle-process.h  asm-handle-thread.c  asm-handle-thread.h  asm-handle.h  asm-input-buffer.c  asm-input-buffer.h  asm-macros.h  asm-output-buffer.c  asm-output-buffer.h  asm-server-socket.c  asm-server-socket.h  asm-server.h  asm-stream-socket.c  asm-stream-socket.h  asm-stream.h  asm-types.h  asm-wstr.c  asm-wstr.h  buffer_test.c
projects/active-sync-mobile/rapi/: Makefile.am  Makefile.in
projects/active-sync-mobile/rapi/common/: Makefile.am  Makefile.in  rapi_enums.h  rapi_fileman.h  rapi_lib.c  rapi_lib.h  rapi_macros.h  rapi_procman.h  rapi_registry.h  rapi_structs.h  rapi_system.h  rapi_test_data.h
projects/active-sync-mobile/rapi/device/: Makefile.am  Makefile.in  rapi_device.h  rapi_device_connection.h  rapi_device_connection_device.c  rapi_device_connection_device.h  rapi_device_connection_session.c  rapi_device_connection_session.h  rapi_device_default.c  rapi_device_default.h  rapi_device_fileman.h  rapi_device_fileman_default.c  rapi_device_fileman_default.h  rapi_device_fileman_dispatch.c  rapi_device_fileman_dispatch.h  rapi_device_fileman_read.c  rapi_device_fileman_read.h  rapi_device_fileman_write.c  rapi_device_fileman_write.h  rapi_device_lib.c  rapi_device_lib.h  rapi_device_procman.h  rapi_device_procman_default.c  rapi_device_procman_default.h  rapi_device_procman_dispatch.c  rapi_device_procman_dispatch.h  rapi_device_procman_read.c  rapi_device_procman_read.h  rapi_device_procman_write.c  rapi_device_procman_write.h  rapi_device_registry.h  rapi_device_registry_default.c  rapi_device_registry_default.h  rapi_device_registry_dispatch.c  rapi_device_registry_dispatch.h  rapi_device_registry_read.c  rapi_device_registry_read.h  rapi_device_registry_write.c  rapi_device_registry_write.h  rapi_device_system.h  (+9 more)
projects/active-sync-mobile/rapi/host/: Makefile.am  Makefile.in  rapi_host.c  rapi_host.h  rapi_host.loT  (+35 more)
projects/active-sync-mobile/rrac/: Makefile.am  Makefile.in
projects/active-sync-mobile/script/: Fileman.def  Process.def  Procman.def  Registry.def  Stream.def  System.def  gen.sh  gen_all.sh  gen_call_in_params.sh  gen_call_in_params_one.sh  gen_call_out_params.sh  gen_class.sh  gen_device_read.sh  gen_device_read_one.sh  gen_device_write.sh  gen_device_write_one.sh  gen_free_in_params.sh  gen_free_out_params.sh  gen_free_out_params_one.sh  gen_free_params.sh  gen_free_params_one.sh  gen_host_read.sh  gen_host_read_one.sh  gen_host_write.sh  gen_host_write_one.sh  gen_param_decls.sh  gen_param_decls_one.sh  gen_read.sh  gen_read_one.sh  gen_read_params.sh  gen_read_params_one.sh  gen_write.sh  gen_write_one.sh
projects/active-sync-mobile/src/: Makefile.am  Makefile.in  asm-device.c  syncd_device_demo.c
projects/cilc/src/: CodeGen.cpp  CodeGen.h  Command.cpp  Command.h  CommandPair.cpp  CommandPair.h  CommandPairs.cpp  CommandPairs.h  Makefile.am  Makefile.in  Param.cpp  Param.h  cilc.xml  command_type.h  libcilc_la-CommandPairs.loT  main.cpp
projects/driver-creater/src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  driver_info.c  driver_info.h  interface.c  interface.c.bak  interface.h  main.c  temp.xml
projects/imgsed/: Makefile.in  README  config.h.in  configure  configure.in
projects/imgsed/src/: Makefile.am  Makefile.in  create_filter.sh  expr.c  expr.h  img_filter.h  img_filter_clip.c  img_filter_clip.h  img_filter_dummy.c  img_filter_dummy.h  img_filter_factory.c  img_filter_factory.h  img_filter_gray.c  img_filter_gray.h  img_filter_param_spec.h  img_filter_params.c  img_filter_params.h  img_filter_resize.c  img_filter_resize.h  img_filter_rotate.c  img_filter_rotate.h  img_filter_save.c  img_filter_save.h  img_filter_text.c  img_filter_text.h  img_param_spec.h  main.c  test.sh  typedef.h
sysprog/document/lrc/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  configure  configure.in  lrc.pc.in
(+757 files in other folders)
